test/src/e2e_vm_tests/test_programs/should_fail/insufficient_type_info_fnret/src/main.sw
script;

struct Dummy<T> {}

fn main() {
    let _b = foo::<Dummy>();
}

fn foo<T>() -> T {
   let x = 1;
   asm(x: x) {
      x: T
   }
}
